[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
clap = { version = "4.5.3", features = ["cargo", "derive"] }
futures-util = { version = "0.3.30", features = ["sink"] }
ipstack = "0.0.5"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tun2 = { version = "1.2.3", features = ["async"] }
wisp-mux = { version = "2.0.0", features = ["tokio_io"] }
