[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
bytes = "1.5.0"
cfg-if = "1.0.0"
clap = { version = "4.5.3", features = ["cargo", "derive"] }
fastwebsockets = { version = "0.7.1", features = ["unstable-split", "upgrade", "simdutf8"] }
futures-util = { version = "0.3.30", features = ["sink"] }
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
ipstack = "0.0.9"
log = "0.4.21"
nix = { version = "0.28.0", features = ["term"] }
rustls-pki-types = { version = "1.4.0", optional = true }
simplelog = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.26.0", optional = true }
tokio-util = "0.7.10"
tun2 = { version = "1.2.3", features = ["async"] }
webpki-roots = { version = "0.26.1", optional = true }
wisp-mux = { version = "3.0.0", features = ["tokio_io", "fastwebsockets"] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[features]
default = ["native-tls"]
rustls = ["dep:tokio-rustls", "dep:webpki-roots", "dep:rustls-pki-types"]
native-tls = ["dep:tokio-native-tls"]
